...
        )) {
            NavigationStack {
                HomePageView(appState: appState)
            }
            .id(appState.tab0ResetId)
            .tabItem {
                Label("首页", systemImage: "play.house")
            }
            .tag(0)

            MakeView(appState: appState)
                .tabItem {
                    Label("制作", systemImage: "book.fill")
                }
                .tag(1)

            NavigationStack {
                SessionRecordListView(
                    appState: appState,
...
                    mode: .manage,
                    isRootTab: true
                )
            }
            .id(appState.tab2ResetId)
            .tabItem {
                Label("管理", systemImage: "books.vertical.circle")
            }
            .tag(2)

            MeTabView(appState: appState)
                .id(appState.tab3ResetId)
                .tabItem {
                    Label("我的", systemImage: "person")
                }
                .tag(3)
        }
        .environment(\.horizontalSizeClass, .compact) // iPad适配，保持底导在底部
        .onChange(of: appState.selectedTab) { old, new in
            if old == 0 && new != 0 { appState.tab0ResetId = (appState.tab0ResetId + 1) % 1024 }
...
